fixed search bar spacing

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   background-size: 27px auto;
   padding: 17px 20px 17px 16px;
   width: 10px;
-  margin-left: -26px;
+  margin-left: -30px;
 }
 
 input {
